overflow x fix

--- a/client/src/components/AdminMenu/DegustatorList/ShowDegList/ShowDegList.module.css
+++ b/client/src/components/AdminMenu/DegustatorList/ShowDegList/ShowDegList.module.css
@@ -23,7 +23,7 @@
 }
 .ShowDegList_table_container {
     height: 85%;
-    overflow: scroll;
+    overflow-x: scroll;
 }
 .ShowDegList_table_container::-webkit-scrollbar {
     width: .3rem;
